Refectored getReplayableHistory method in History class